# skin-lesion-xai

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: README.md
reports/: methodology.md
scripts/: 01_explore_data.py  02_train.py  03_explain.py
src/skin_lesion_xai/: __init__.py  config.py  data.py  evaluate.py  explain.py  models.py  train.py
