[project]
name = "skin-lesion-xai"
version = "0.1.0"
description = "Comparing skin-lesion classifiers (ViT vs ResNet) with LIME explainability"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mariyam Haroon" }]

# These are the libraries the project needs. UV installs exact, locked
# versions into an isolated virtual environment so the project is reproducible.
dependencies = [
    "torch>=2.2",            # deep-learning engine
    "torchvision>=0.17",     # image utilities for torch
    "transformers>=4.40",    # HuggingFace models (ViT, ResNet) + Trainer
    "datasets>=2.19",        # HuggingFace datasets (loads HAM10000)
    "accelerate>=0.30",      # makes the HuggingFace Trainer run on GPU/CPU
    "scikit-learn>=1.4",     # metrics (F1, ROC-AUC, confusion matrix)
    "scikit-image>=0.22",    # image segmentation used by LIME
    "lime>=0.2.0.1",         # the explainability technique
    "wandb>=0.17",           # Weights & Biases experiment tracking
    "matplotlib>=3.8",       # plotting figures for the report
    "pandas>=2.2",           # tabular data handling
    "numpy>=1.26",           # arrays
    "pillow>=10.0",          # image loading
]

[project.optional-dependencies]
# Tools only needed while developing, not for running the pipeline.
dev = ["ruff>=0.4", "ipykernel>=6.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tells the build system that our code lives in src/skin_lesion_xai
packages = ["src/skin_lesion_xai"]
